management-namespace/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: mgt
spec:
  ports:
    - port: 3000
#      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
#  sessionAffinity: None
#  type: LoadBalancer
